@@ -536,33 +536,23 @@ predicate(split/5,234,static,private,monofile,global,[
     get_variable(y(0),1),
     get_variable(y(1),2),
     get_variable(y(2),4),
-    get_variable(x(1),3),
-    put_structure(a/2,3),
-    unify_variable(x(2)),
-    unify_value(x(2)),
-    put_structure(a/2,7),
-    unify_nil,
-    unify_local_value(x(1)),
-    put_nil(1),
-    put_nil(2),
-    put_nil(4),
-    put_variable(y(3),5),
-    put_variable(y(4),6),
-    put_variable(y(5),8),
-    call(split1/9),
+    put_variable(y(3),1),
+    put_variable(y(4),2),
+    put_variable(y(5),4),
+    call(split1/5),
     put_value(y(3),0),
     put_value(y(0),1),
-    call(terminate_list/2),
+    call(group_by_keys/2),
     put_value(y(4),0),
     put_value(y(1),1),
-    call(terminate_list/2),
+    call(group_by_keys/2),
     put_unsafe_value(y(5),0),
     put_value(y(2),1),
     deallocate,
-    execute(terminate_list/2)]).
+    execute(group_by_keys/2)]).
 
 
-predicate(split1/9,241,static,private,monofile,global,[
+predicate(split1/5,241,static,private,monofile,global,[
     switch_on_term(1,2,fail,4,fail),
 
 label(1),
@@ -570,25 +560,18 @@ label(1),
 
 label(2),
     get_nil(0),
-    get_value(x(8),4),
-    get_value(x(7),3),
-    get_value(x(6),2),
-    get_value(x(5),1),
+    get_nil(1),
+    get_nil(2),
+    get_nil(3),
+    get_nil(4),
     proceed,
 
 label(3),
     trust_me_else_fail,
 
 label(4),
-    allocate(9),
-    get_variable(y(1),5),
-    get_variable(y(2),6),
-    get_variable(y(3),7),
-    get_variable(y(4),8),
-    get_variable(x(5),4),
-    get_variable(x(4),3),
-    get_variable(x(3),2),
-    get_variable(x(2),1),
+    allocate(5),
+    get_variable(x(6),1),
     get_list(0),
     unify_variable(x(0)),
     unify_variable(y(0)),
@@ -596,22 +579,21 @@ label(4),
     unify_variable(x(1)),
     unify_variable(x(0)),
     unify_void(1),
-    put_variable(y(5),6),
-    put_variable(y(6),7),
-    put_variable(y(7),8),
-    put_variable(y(8),9),
+    put_value(x(2),7),
+    put_value(x(3),8),
+    put_value(x(4),9),
+    put_variable(y(1),2),
+    put_variable(y(2),3),
+    put_variable(y(3),4),
+    put_variable(y(4),5),
     call(split2/10),
     put_value(y(0),0),
-    put_unsafe_value(y(5),1),
-    put_unsafe_value(y(6),2),
-    put_unsafe_value(y(7),3),
-    put_unsafe_value(y(8),4),
-    put_value(y(1),5),
-    put_value(y(2),6),
-    put_value(y(3),7),
-    put_value(y(4),8),
+    put_unsafe_value(y(1),1),
+    put_unsafe_value(y(2),2),
+    put_unsafe_value(y(3),3),
+    put_unsafe_value(y(4),4),
     deallocate,
-    execute(split1/9)]).
+    execute(split1/5)]).
 
 
 predicate(split2/10,248,static,private,monofile,global,[
@@ -627,13 +609,15 @@ label(3),
     get_value(x(9),5),
     get_value(x(8),4),
     get_value(x(7),3),
-    get_variable(x(3),2),
-    get_variable(x(2),1),
     get_structure(atm/1,0),
-    unify_variable(x(1)),
-    put_value(x(3),0),
-    put_value(x(6),3),
-    execute(add_to_list/4),
+    unify_variable(x(0)),
+    get_list(6),
+    unify_variable(x(3)),
+    unify_local_value(x(2)),
+    get_structure((-)/2,3),
+    unify_value(x(0)),
+    unify_local_value(x(1)),
+    proceed,
 
 label(4),
     retry_me_else(6),
@@ -642,12 +626,15 @@ label(5),
     get_value(x(9),5),
     get_value(x(8),4),
     get_value(x(6),2),
-    get_variable(x(2),1),
     get_structure(int/1,0),
-    unify_variable(x(1)),
-    put_value(x(3),0),
-    put_value(x(7),3),
-    execute(add_to_list/4),
+    unify_variable(x(0)),
+    get_list(7),
+    unify_variable(x(2)),
+    unify_local_value(x(3)),
+    get_structure((-)/2,2),
+    unify_value(x(0)),
+    unify_local_value(x(1)),
+    proceed,
 
 label(6),
     retry_me_else(8),
@@ -657,15 +644,9 @@ label(7),
     get_value(x(9),5),
     get_value(x(7),3),
     get_value(x(6),2),
-    get_structure(a/2,4),
-    unify_variable(x(2)),
-    unify_variable(x(0)),
-    get_list(2),
+    get_list(8),
     unify_local_value(x(1)),
-    unify_variable(x(1)),
-    get_structure(a/2,8),
-    unify_value(x(1)),
-    unify_value(x(0)),
+    unify_local_value(x(4)),
     proceed,
 
 label(8),
@@ -675,81 +656,36 @@ label(9),
     get_value(x(8),4),
     get_value(x(7),3),
     get_value(x(6),2),
-    get_variable(x(2),1),
     get_structure(stc/2,0),
-    unify_variable(x(3)),
-    unify_variable(x(0)),
-    put_structure((/)/2,1),
-    unify_value(x(3)),
-    unify_value(x(0)),
-    put_value(x(5),0),
-    put_value(x(9),3),
-    execute(add_to_list/4)]).
-
-
-predicate(add_to_list/4,262,static,private,monofile,global,[
-    pragma_arity(5),
-    get_current_choice(x(4)),
-    switch_on_term(2,3,fail,1,fail),
-
-label(1),
-    try(5),
-    trust(7),
-
-label(2),
-    try_me_else(4),
-
-label(3),
-    get_nil(0),
-    get_list(3),
-    unify_variable(x(0)),
-    unify_nil,
-    get_structure(a/3,0),
-    unify_local_value(x(1)),
-    unify_variable(x(0)),
-    unify_list,
-    unify_local_value(x(2)),
-    unify_value(x(0)),
-    proceed,
-
-label(4),
-    retry_me_else(6),
-
-label(5),
-    get_list(0),
-    unify_variable(x(0)),
-    unify_variable(x(5)),
-    get_structure(a/3,0),
-    unify_local_value(x(1)),
-    unify_variable(x(6)),
-    unify_variable(x(0)),
-    get_list(6),
-    unify_local_value(x(2)),
     unify_variable(x(2)),
-    get_list(3),
+    unify_variable(x(0)),
+    get_list(9),
     unify_variable(x(3)),
-    unify_value(x(5)),
-    get_structure(a/3,3),
+    unify_local_value(x(5)),
+    get_structure((-)/2,3),
+    unify_variable(x(3)),
     unify_local_value(x(1)),
+    get_structure((/)/2,3),
     unify_value(x(2)),
     unify_value(x(0)),
-    cut(x(4)),
-    proceed,
-
-label(6),
-    trust_me_else_fail,
-
-label(7),
-    get_list(0),
-    unify_variable(x(4)),
-    unify_variable(x(0)),
-    get_list(3),
-    unify_value(x(4)),
-    unify_variable(x(3)),
-    execute(add_to_list/4)]).
+    proceed]).
 
 
-predicate(terminate_list/2,273,static,private,monofile,global,[
+predicate(group_by_keys/2,268,static,private,monofile,global,[
+    allocate(2),
+    get_variable(y(0),0),
+    get_variable(y(1),1),
+    put_value(y(0),0),
+    call(keysort/1),
+    put_value(y(0),0),
+    put_value(y(1),1),
+    call(group_by_keys1/2),
+    put_value(y(1),0),
+    deallocate,
+    execute(sort/1)]).
+
+
+predicate(group_by_keys1/2,278,static,private,monofile,global,[
     switch_on_term(1,2,fail,4,fail),
 
 label(1),
@@ -764,23 +700,55 @@ label(3),
     trust_me_else_fail,
 
 label(4),
+    allocate(2),
     get_list(0),
     unify_variable(x(2)),
     unify_variable(x(0)),
-    get_structure(a/3,2),
+    get_structure((-)/2,2),
     unify_variable(x(3)),
-    unify_nil,
     unify_variable(x(2)),
     get_list(1),
-    unify_variable(x(4)),
     unify_variable(x(1)),
-    get_structure(a/2,4),
+    unify_variable(y(0)),
+    get_structure((=)/2,1),
+    unify_variable(x(1)),
     unify_value(x(3)),
+    get_list(1),
     unify_value(x(2)),
-    execute(terminate_list/2)]).
+    unify_variable(x(2)),
+    put_value(x(3),1),
+    put_variable(y(1),3),
+    call(group_by_keys2/4),
+    put_unsafe_value(y(1),0),
+    put_value(y(0),1),
+    deallocate,
+    execute(group_by_keys1/2)]).
 
 
-predicate(gen_switch/5,281,static,private,monofile,global,[
+predicate(group_by_keys2/4,285,static,private,monofile,global,[
+    pragma_arity(5),
+    get_current_choice(x(4)),
+    try_me_else(1),
+    get_list(0),
+    unify_variable(x(5)),
+    unify_variable(x(0)),
+    get_structure((-)/2,5),
+    unify_local_value(x(1)),
+    unify_variable(x(5)),
+    get_list(2),
+    unify_value(x(5)),
+    unify_variable(x(2)),
+    cut(x(4)),
+    execute(group_by_keys2/4),
+
+label(1),
+    trust_me_else_fail,
+    get_nil(2),
+    get_value(x(3),0),
+    proceed]).
+
+
+predicate(gen_switch/5,294,static,private,monofile,global,[
     pragma_arity(6),
     get_current_choice(x(5)),
     try_me_else(5),
@@ -804,9 +772,10 @@ label(4),
     get_list(0),
     unify_variable(x(0)),
     unify_nil,
-    get_structure(a/2,0),
+    get_structure((=)/2,0),
+    unify_variable(x(0)),
     unify_void(1),
-    unify_list,
+    get_list(0),
     unify_local_value(x(2)),
     unify_nil,
     cut(x(5)),
@@ -838,7 +807,7 @@ label(5),
     proceed]).
 
 
-predicate(create_switch_list/4,302,static,private,monofile,global,[
+predicate(create_switch_list/4,317,static,private,monofile,global,[
     switch_on_term(1,2,fail,4,fail),
 
 label(1),
@@ -859,9 +828,9 @@ label(4),
     get_list(0),
     unify_variable(x(0)),
     unify_variable(y(0)),
-    get_structure(a/2,0),
-    unify_variable(x(2)),
+    get_structure((=)/2,0),
     unify_variable(x(0)),
+    unify_variable(x(2)),
     get_list(1),
     unify_variable(x(1)),
     unify_variable(y(1)),
@@ -878,7 +847,7 @@ label(4),
     execute(create_switch_list/4)]).
 
 
-predicate(gen_list/4,311,static,private,monofile,global,[
+predicate(gen_list/4,327,static,private,monofile,global,[
     pragma_arity(5),
     get_current_choice(x(4)),
     switch_on_term(2,3,fail,1,fail),
@@ -928,7 +897,7 @@ label(7),
     execute(gen_list1/3)]).
 
 
-predicate(gen_list1/3,321,static,private,monofile,global,[
+predicate(gen_list1/3,337,static,private,monofile,global,[
     switch_on_term(2,fail,fail,1,fail),
 
 label(1),
@@ -964,7 +933,7 @@ label(5),
     execute(gen_list1/3)]).
 
 
-predicate(gen_insts/3,330,static,private,monofile,global,[
+predicate(gen_insts/3,346,static,private,monofile,global,[
     pragma_arity(4),
     get_current_choice(x(3)),
     switch_on_term(2,fail,fail,1,fail),
@@ -1029,7 +998,7 @@ label(5),
     proceed]).
 
 
-predicate(gen_insts1/3,339,static,private,monofile,global,[
+predicate(gen_insts1/3,355,static,private,monofile,global,[
     pragma_arity(4),
     get_current_choice(x(3)),
     switch_on_term(2,fail,fail,1,fail),
@@ -1100,7 +1069,7 @@ label(5),
     proceed]).
 
 
-predicate(allocate_labels/3,349,static,private,monofile,global,[
+predicate(allocate_labels/3,365,static,private,monofile,global,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(7),
